add isNew in twig example
add transformTemplateFunction in FileUploader.js - needed for collections

adds initCallback function

class="thumbnail" collide with bootstrap thumbnail

fix bug in FileUploader.js

upgrade to new version of jquery.fileupload.js
- needed option crop in thumbnails

small fixes in UploadHandler
    - correct cropping in function imagick_create_scaled_image
      if option no-cache isnt set imagick remebers last thumbnail size and not cropping other sizes correctly

fixed cropping in imagick

--- a/Resources/views/Default/templates.html.twig
+++ b/Resources/views/Default/templates.html.twig
@@ -29,7 +29,7 @@
 
 {# parameters to underscore template: name, thumbnail_url, original_url #}
 <script type="text/template" id="file-uploader-file-template">
-    <li data-name="<%- name %>" class="thumbnail">
+    <li data-name="<%- name %>" class="thumbnail-wrapper">
         {# Some things can be thumbnailed, some things not #}
         <% if ('undefined' != typeof thumbnail_url) { %>
             <img src="<%- thumbnail_url %>" class="thumbnail-image" />
